<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp">

        <ImageView
            android:id="@+id/imageViewVisitor"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_180dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_user"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/textViewVisitorName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageViewVisitor"
            android:layout_marginTop="@dimen/padding_4dp"
            android:text="@string/text_visitor_name"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/font_18sp" />

        <TextView
            android:id="@+id/textViewVisitorCompany"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewVisitorName"
            android:layout_marginTop="@dimen/padding_4dp"
            android:text="@string/text_company_name"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/font_18sp" />

        <TextView
            android:id="@+id/textViewVisitorEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewVisitorCompany"
            android:layout_marginTop="@dimen/padding_4dp"
            android:text="@string/text_email_id"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/font_18sp" />

        <TextView
            android:id="@+id/textViewVisitorPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewVisitorEmail"
            android:layout_marginTop="@dimen/padding_4dp"
            android:text="@string/text_phone_number"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/font_18sp" />

        <TextView
            android:id="@+id/textViewVisitorVisitDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textViewVisitorPhone"
            android:layout_marginTop="@dimen/padding_4dp"
            android:text="@string/text_visitor_date"
            android:gravity="end"
            android:layout_alignParentEnd="true"
            android:textColor="@color/textColorDark"
            android:textSize="@dimen/font_18sp" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>